--- a/css/index.css
+++ b/css/index.css
@@ -1,67 +1,100 @@
 :root {
-    --white: #ffffff;
-    --black: #000000;
-    --off-black: #292929;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  --white: #ffffff;
+  --black: #000000;
+  --off-black: #292929;
+}
 
-  body{
-      height: 100vh;
-      font-family: sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .widget{
-      width: 350px;
-      height: 500px;
-      border-radius: 10px;
-      border: solid 3.7px var(--off-black);
-      box-shadow: 7px 7px var(--off-black);
-  }
+body {
+  height: 100vh;
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .results{
-      width: 100%;
-      height: 25%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-  }
+.widget {
+  width: 350px;
+  height: 550px;
+  border-radius: 10px;
+  border: solid 3.7px var(--off-black);
+  box-shadow: 7px 7px var(--off-black);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  .buttons{
-      width: 100%;
-      height: auto;
-  }
+.results {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
-  .fila{
-      width: 100%;
-      height: 7%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: row;
-  }
+.buttons {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  align-self: flex-end;
+  padding-bottom: 10px;
+  background-color: rgba(127, 255, 212, 0.651);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+  padding-top: 40px;
+}
 
-  .btn-0,
-  .btn-coma{
-      flex-grow: 0;
-  }
-  .btn-result{
-      flex-grow: 0.6;
-  }
+.fila {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
 
-  .btn{
-      width: 60px;
-      height: 60px;
-      margin: 7px;
-      border-radius: 4px;
-      color: var(--black);
-      border: solid 1px var(--off-black);
-  }
+.btn-0,
+.btn-coma {
+  flex-grow: 0;
+}
+
+.btn-result {
+  flex-grow: 0.6;
+}
+
+.btn {
+  width: 60px;
+  height: 60px;
+  margin: 7px;
+  border-radius: 4px;
+  color: var(--black);
+  border: solid 1px var(--off-black);
+}
+
+.results {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    padding: 0px 30px;
+}
+
+.final-score {
+    font-weight: bold;
+    font-size: 40px;
+    padding-bottom: 5px;
+}
+
+.display-operation {
+    color: gray;
+    font-weight: 500;
+    font-size: 16px;
+}
+
